loader image is not showing issue fixed in firefox

--- a/src/scenes/shared/loader/Loader.scss
+++ b/src/scenes/shared/loader/Loader.scss
@@ -23,7 +23,8 @@
     transform: translate(-50%, -50%);
     -webkit-animation: load3 1.4s infinite linear;
     animation: load3 1.4s infinite linear;
-    text-indent:-9999px
+    text-indent:-9999px;
+    color: transparent;
     //transform: translate(-50%, -50%);
     //width: 100px;
     //height: 100px;
